Animation Added in all pages

--- a/admission.html
+++ b/admission.html
@@ -12,7 +12,8 @@
   <!-- Font Awesome Icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-
+  <!-- Animate On Scroll -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <link rel="stylesheet" href="./css/utility.css">
   <link rel="stylesheet" href="./css/style.css">
@@ -59,16 +60,18 @@
   </aside>
 
   <section id="admission-hero">
-    <p>Primary & Secondary School</p>
-    <h1>Learn. Educate. Grow</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias sed error perferendis animi? Corporis, optio.
+    <p data-aos="fade-up">Primary & Secondary School</p>
+    <h1 data-aos="fade-up">Learn. Educate. Grow</h1>
+    <p data-aos="fade-up">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias sed error perferendis
+      animi? Corporis, optio.
     </p>
   </section>
 
   <section id="admission-content-1">
     <article>
-      <h1>Learn By Doing</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      <h1 data-aos="fade-right">Learn By Doing</h1>
+      <p data-aos="fade-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+        ut labore et dolore
         magna
         aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat.
@@ -80,8 +83,9 @@
 
   <section id="admission-content-2">
     <article>
-      <h1>BEYOND THE BOOKS</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      <h1 data-aos="fade-right">BEYOND THE BOOKS</h1>
+      <p data-aos="fade-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+        ut labore et dolore
         magna
         aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat.
@@ -97,19 +101,20 @@
   <section id="admission-details">
 
     <article>
-      <p>Registration</p>
-      <h2>How To Register Your Child for Mveledzandivho</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      <p data-aos="fade-down">Registration</p>
+      <h2 data-aos="fade-down">How To Register Your Child for Mveledzandivho</h2>
+      <p data-aos="fade-down">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+        ut labore et dolore
         magna
         aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-      <div class="box blue">
+      <div class="box blue" data-aos="fade-right">
         <i class="fa-solid fa-phone"></i>
         <div>
           <p>CALL FOR INQUIRY</p>
           <p><a href="">(345) 464 - 4632</a></p>
         </div>
       </div>
-      <div class="box orange">
+      <div class="box orange" data-aos="fade-right">
         <i class="fa-regular fa-envelope"></i>
         <div>
           <p>MAIL FOR INQUIRY</p>
@@ -119,15 +124,15 @@
     </article>
 
     <article>
-      <div>
+      <div data-aos="fade-up">
         <h1>01.</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae ad obcaecati error odio dolor amet.</p>
       </div>
-      <div>
+      <div data-aos="fade-up">
         <h1>02.</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae ad obcaecati error odio dolor amet.</p>
       </div>
-      <div>
+      <div data-aos="fade-up">
         <h1>03.</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae ad obcaecati error odio dolor amet.</p>
       </div>
@@ -135,16 +140,16 @@
   </section>
 
   <section id="apply-form">
-    <i class="fa-regular fa-file"></i>
-    <p>Apply for Admission</p>
-    <h2>Academic Year - 2022</h2>
+    <i class="fa-regular fa-file" data-aos="fade-up"></i>
+    <p data-aos="fade-up">Apply for Admission</p>
+    <h2 data-aos="fade-up">Academic Year - 2022</h2>
 
-    <form action="" class="form-box">
+    <form action="" class="form-box" data-aos="fade-up">
       <div>
-        <h1>Just Few Things About Learner</h1>
+        <h1 data-aos="fade-up-right">Just Few Things About Learner</h1>
       </div>
 
-      <div>
+      <div data-aos="fade-left">
         <input type="text" placeholder="First Name">
         <input type="text" placeholder="Last Name">
 
@@ -179,17 +184,17 @@
 
       </div>
 
-      <div>
+      <div data-aos="fade-right">
         <input type="email" placeholder="Email">
         <input type="text" placeholder="Phone">
         <input type="text" placeholder="Address">
       </div>
 
       <div>
-        <h1>School Admin Will Reach You At</h1>
+        <h1 data-aos="fade-up-left">School Admin Will Reach You At</h1>
       </div>
 
-      <div>
+      <div data-aos="fade-up-left">
         <button type="submit" class="btn">Submit Application <i class="fa-regular fa-circle-right"></i></button>
       </div>
 
@@ -200,31 +205,28 @@
 
 
 
-
-
-
   <section id="get-in-touch">
     <div class="container">
       <article>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>450</h2>
           <p>Students</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>30</h2>
           <p>Faculty</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>24</h2>
           <p>After School Programs</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>51</h2>
           <p>Years Established</p>
         </div>
       </article>
 
-      <article>
+      <article data-aos="fade-up-left">
         <h2>Get In Touch</h2>
 
         <p>Location: 1243 Divi St., San Francisco, CA 92421</p>
@@ -239,7 +241,7 @@
       </article>
     </div>
 
-    <div class="policy">
+    <div class="policy" data-aos="fade-up">
       <p>Non-Discrimination Policy</p>
       <p>By accessing, using and/or interacting with Mveledzandivho Primary via its online and/or electronic platforms
         such as
@@ -261,6 +263,17 @@
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+  <script>
+    AOS.init({
+      offset: 200,
+      duration: 600,
+      once: false,
+      mirror: false,
+      easing: 'ease-in-out',
+    });
+  </script>
 
   <script src="./js/main.js"></script>
 
