--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
 
   <section id="statements">
     <div class="container">
-      <i data-aos="slide-up" class="fa-regular fa-bookmark"></i>
-      <h3 data-aos="slide-up">Mission</h3>
-      <h1 data-aos="slide-up">Mveledzandivho's Mission & Vision</h1>
-      <p data-aos="slide-up">
+      <i data-aos="fade-up" class="fa-regular fa-bookmark"></i>
+      <h3 data-aos="fade-up">Mission</h3>
+      <h1 data-aos="fade-up">Mveledzandivho's Mission & Vision</h1>
+      <p data-aos="fade-up">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste accusantium aliquam consectetur architecto! Minus
         cum, magni officia quisquam, deserunt quod ipsam veniam esse, nam sapiente illum excepturi quidem hic laudantium
         necessitatibus dolores illo. Dolore ex, pariatur itaque et tenetur ea debitis! Sunt consequatur obcaecati
@@ -125,7 +125,7 @@
       </p>
 
       <div>
-        <a data-aos="slide-up" href="./sponsor.html" class="btn">Get Involved</a>
+        <a data-aos="fade-up" href="./sponsor.html" class="btn">Get Involved</a>
       </div>
     </div>
   </section>
@@ -133,23 +133,23 @@
   <section id="principal">
     <article>
       <div>
-        <p data-aos="slide-left">a word</p>
-        <h2 data-aos="slide-left">From Our principal</h2>
-        <blockquote data-aos="slide-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita perferendis
+        <p data-aos="fade-right">a word</p>
+        <h2 data-aos="fade-right">From Our principal</h2>
+        <blockquote data-aos="fade-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita perferendis
           blanditiis amet fugit
           dolor alias, quidem, id ex, facere harum magnam totam. Dolore quo corporis libero saepe, fuga, maxime
           voluptates
           rem recusandae assumenda fugit ipsum consequatur voluptatem iste earum perferendis!</blockquote>
       </div>
-      <p data-aos="slide-left"> - Principle Name</p>
+      <p data-aos="fade-right"> - Principle Name</p>
     </article>
     <article style='background-image: url("./images/principal-1.jfif");'></article>
   </section>
 
   <section id="notice">
-    <i data-aos="slide-up" class="fa-solid fa-exclamation"></i>
-    <p data-aos="slide-up">Notices</p>
-    <h2 data-aos="slide-up">From Mveledzandivho</h2>
+    <i data-aos="fade-up" class="fa-solid fa-exclamation"></i>
+    <p data-aos="fade-up">Notices</p>
+    <h2 data-aos="fade-up">From Mveledzandivho</h2>
 
     <div class="container">
       <div data-aos="fade-up" class="box">
@@ -184,13 +184,13 @@
   </section>
 
   <section id="news">
-    <i class="fa-regular fa-newspaper"></i>
-    <p>Blog</p>
-    <h2>News & Updates</h2>
+    <i class="fa-regular fa-newspaper" data-aos="fade-up"></i>
+    <p data-aos="fade-up">Blog</p>
+    <h2 data-aos="fade-up">News & Updates</h2>
 
     <div class="container">
 
-      <div class="primary-news">
+      <div class="primary-news" data-aos="fade-up-right">
         <div class="card">
           <div class="card-img-top"
             style="background: url('https://source.unsplash.com/1600x900/?nature') no-repeat center center / cover;">
@@ -207,7 +207,7 @@
         </div>
       </div>
 
-      <div class="secondary-news">
+      <div class="secondary-news" data-aos="fade-up-left">
 
         <div class="card">
           <div class="card-img-top"
@@ -239,7 +239,7 @@
       </div>
     </div>
 
-    <div class="container bottom">
+    <div class="container bottom" data-aos="fade-up-left">
       <a href="#" class="btn">Read Older News <i class="fa-regular fa-circle-right"></i></a>
     </div>
 
@@ -247,13 +247,13 @@
 
   <section id="events">
     <div class="top">
-      <i data-aos="slide-up" class="fa-regular fa-calendar"></i>
-      <p data-aos="slide-up">calendar</p>
-      <h1 data-aos="slide-up">Our Upcoming Curricular Events & Activities</h1>
+      <i data-aos="fade-up" class="fa-regular fa-calendar"></i>
+      <p data-aos="fade-up">calendar</p>
+      <h1 data-aos="fade-up">Our Upcoming Curricular Events & Activities</h1>
     </div>
 
     <div class="bottom">
-      <div class="box" data-aos="zoom-in">
+      <div class="box" data-aos="zoom-in-up">
         <p>
           <!-- From Date -->
           <span>01</span>
@@ -263,7 +263,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quos minima eaque quo!</p>
       </div>
 
-      <div class="box" data-aos="zoom-in">
+      <div class="box" data-aos="zoom-in-up">
         <p>
           <span>12</span>
           May
@@ -272,7 +272,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quos minima eaque quo!</p>
       </div>
 
-      <div class="box" data-aos="zoom-in">
+      <div class="box" data-aos="zoom-in-up">
         <p>
           <span>14</span>
           May
@@ -281,7 +281,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quos minima eaque quo!</p>
       </div>
 
-      <div class="box" data-aos="zoom-in">
+      <div class="box" data-aos="zoom-in-up">
         <p>
           <span>22</span>
           May
@@ -290,7 +290,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quos minima eaque quo!</p>
       </div>
 
-      <div class="box" data-aos="zoom-in">
+      <div class="box" data-aos="zoom-in-up">
         <p>
           <span>03</span>
           June
@@ -299,7 +299,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quos minima eaque quo!</p>
       </div>
 
-      <div class="box" data-aos="zoom-in">
+      <div class="box" data-aos="zoom-in-up">
         <p>
           <span>01</span>
           May
@@ -314,25 +314,25 @@
   <section id="get-in-touch">
     <div class="container">
       <article>
-        <div data-aos="zoom-in">
+        <div data-aos="fade-up-right">
           <h2>450</h2>
           <p>Students</p>
         </div>
-        <div data-aos="zoom-in">
+        <div data-aos="fade-up-right">
           <h2>30</h2>
           <p>Faculty</p>
         </div>
-        <div data-aos="zoom-in">
+        <div data-aos="fade-up-right">
           <h2>24</h2>
           <p>After School Programs</p>
         </div>
-        <div data-aos="zoom-in">
+        <div data-aos="fade-up-right">
           <h2>51</h2>
           <p>Years Established</p>
         </div>
       </article>
 
-      <article data-aos="zoom-in">
+      <article data-aos="fade-up-left">
         <h2>Get In Touch</h2>
 
         <p>Location: 1243 Divi St., San Francisco, CA 92421</p>
@@ -375,8 +375,8 @@
     AOS.init({
       offset: 200,
       duration: 600,
-      once: true,
-      mirror: true,
+      once: false,
+      mirror: false,
       easing: 'ease-in-out',
     });
   </script>
