--- a/staff.html
+++ b/staff.html
@@ -12,7 +12,8 @@
   <!-- Font Awesome Icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-
+  <!-- Animate On Scroll -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <link rel="stylesheet" href="./css/utility.css">
   <link rel="stylesheet" href="./css/style.css">
@@ -62,18 +63,19 @@
 
   <section id="staff-hero">
     <div class="container">
-      <p>Staff & Students</p>
-      <h2>Who We Are</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quos ratione suscipit architecto libero
+      <p data-aos="fade-up-right">Staff & Students</p>
+      <h2 data-aos="fade-up-right">Who We Are</h2>
+      <p data-aos="fade-up-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quos ratione suscipit
+        architecto libero
         deserunt
         possimus similique commodi.</p>
-      <a href="" class="btn">Full Staff Directory</a>
+      <a href="" class="btn" data-aos="fade-up-right">Full Staff Directory</a>
     </div>
   </section>
 
   <section id="staff-statements">
     <div class="container">
-      <div class="images">
+      <div class="images" data-aos="fade-up">
         <div>
           <img src="./images/staff-statements-img-1.jpg" alt="">
         </div>
@@ -88,11 +90,11 @@
         </div>
       </div>
       <div class="content">
-        <div>
+        <div data-aos="fade-right">
           <p>Only the Best</p>
           <h2>We Know How to Make Learning Fun For Kids</h2>
         </div>
-        <div>
+        <div data-aos="fade-left">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna
             aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -108,79 +110,81 @@
 
   <section id="our-staff">
     <div class="container">
-      <p>our staff</p>
-      <h2>Management of Mveledzandivho</h2>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates voluptate adipisci odio, culpa libero
+      <p data-aos="fade-up">our staff</p>
+      <h2 data-aos="fade-up">Management of Mveledzandivho</h2>
+      <p data-aos="fade-up">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates voluptate adipisci
+        odio, culpa libero
         molestiae?</p>
 
       <div class="staffs management">
-        <div class="staff">
+        <div class="staff" data-aos="fade-up">
           <img src="./images/staff-member-1.jpg" alt="">
           <p>Jonathan Doe</p>
           <h6>Deputy Principal</h6>
         </div>
 
-        <div class="staff">
+        <div class="staff" data-aos="fade-up">
           <img src="./images/staff-member-2.jpg" alt="">
           <p>Jane Smith</p>
           <h6>Deputy Principal Foundation</h6>
         </div>
 
-        <div class="staff">
+        <div class="staff" data-aos="fade-up">
           <img src="./images/staff-member-3.jpg" alt="">
           <p>Dana Williams</p>
           <h6>Deputy Principal Intersen Phase</h6>
         </div>
       </div>
 
-      <h2>Our Educators</h2>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates voluptate adipisci odio, culpa libero
+      <h2 data-aos="fade-up">Our Educators</h2>
+      <p data-aos="fade-up">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates voluptate adipisci
+        odio, culpa libero
         molestiae?</p>
 
       <div class="staffs educator">
-        <div class="staff">
+        <div class="staff" data-aos="fade-up">
           <img src="./images/staff-member-1.jpg" alt="">
           <p>Kharidza Ndivhuho</p>
           <h6>2nd Grade</h6>
         </div>
 
-        <div class="staff">
+        <div class="staff" data-aos="fade-up">
           <img src="./images/staff-member-2.jpg" alt="">
           <p>Kwinda Nokuthula</p>
           <h6>Kindergarten</h6>
         </div>
 
-        <div class="staff">
+        <div class="staff" data-aos="fade-up">
           <img src="./images/staff-member-3.jpg" alt="">
           <p>Lehong Nokwanda</p>
           <h6>1st Grade</h6>
         </div>
 
-        <div class="staff">
+        <div class="staff" data-aos="fade-up">
           <img src="./images/staff-member-1.jpg" alt="">
           <p>Kharidza Ndivhuho</p>
           <h6>2nd Grade</h6>
         </div>
 
-        <div class="staff">
+        <div class="staff" data-aos="fade-up">
           <img src="./images/staff-member-2.jpg" alt="">
           <p>Kwinda Nokuthula</p>
           <h6>Kindergarten</h6>
         </div>
 
-        <div class="staff">
+        <div class="staff" data-aos="fade-up">
           <img src="./images/staff-member-3.jpg" alt="">
           <p>Lehong Nokwanda</p>
           <h6>1st Grade</h6>
         </div>
 
-        <div class="staff">
+        <div class="staff" data-aos="fade-up">
           <img src="./images/staff-member-1.jpg" alt="">
           <p>Kharidza Ndivhuho</p>
           <h6>2nd Grade</h6>
         </div>
 
-        <div class="staff">
+        <div class="staff" data-aos="fade-up">
           <img src="./images/staff-member-2.jpg" alt="">
           <p>Kwinda Nokuthula</p>
           <h6>Kindergarten</h6>
@@ -188,30 +192,31 @@
 
       </div>
 
-      <h2>Other Faculty</h2>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates voluptate adipisci odio, culpa libero
+      <h2 data-aos="fade-up">Other Faculty</h2>
+      <p data-aos="fade-up">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates voluptate adipisci
+        odio, culpa libero
         molestiae?</p>
 
       <div class="staffs other">
-        <div class="staff">
+        <div class="staff" data-aos="fade-up">
           <img src="./images/staff-member-1.jpg" alt="">
           <p>Jonathan Doe</p>
           <h6>Administration Office</h6>
         </div>
 
-        <div class="staff">
+        <div class="staff" data-aos="fade-up">
           <img src="./images/staff-member-2.jpg" alt="">
           <p>Jane Smith</p>
           <h6>Library</h6>
         </div>
 
-        <div class="staff">
+        <div class="staff" data-aos="fade-up">
           <img src="./images/staff-member-3.jpg" alt="">
           <p>Dana Williams</p>
           <h6>Accountant</h6>
         </div>
 
-        <div class="staff">
+        <div class="staff" data-aos="fade-up">
           <img src="./images/staff-member-1.jpg" alt="">
           <p>Kharidza Ndivhuho</p>
           <h6>Office Executive</h6>
@@ -227,41 +232,43 @@
   <section id="principal">
     <article>
       <div>
-        <p>a word</p>
-        <h2>From Our principal</h2>
-        <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita perferendis blanditiis amet fugit
+        <p data-aos="fade-right">a word</p>
+        <h2 data-aos="fade-right">From Our principal</h2>
+        <blockquote data-aos="fade-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita perferendis
+          blanditiis amet fugit
           dolor alias, quidem, id ex, facere harum magnam totam. Dolore quo corporis libero saepe, fuga, maxime
           voluptates
           rem recusandae assumenda fugit ipsum consequatur voluptatem iste earum perferendis!</blockquote>
       </div>
-      <p> - Principle Name</p>
+      <p data-aos="fade-right"> - Principle Name</p>
     </article>
     <article style='background-image: url("./images/principal-1.jfif");'></article>
   </section>
 
 
+
   <section id="get-in-touch">
     <div class="container">
       <article>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>450</h2>
           <p>Students</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>30</h2>
           <p>Faculty</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>24</h2>
           <p>After School Programs</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>51</h2>
           <p>Years Established</p>
         </div>
       </article>
 
-      <article>
+      <article data-aos="fade-up-left">
         <h2>Get In Touch</h2>
 
         <p>Location: 1243 Divi St., San Francisco, CA 92421</p>
@@ -276,17 +283,16 @@
       </article>
     </div>
 
-    <div class="policy">
+    <div class="policy" data-aos="fade-up">
       <p>Non-Discrimination Policy</p>
-      <p>By accessing, using and/or interacting with Mveledzandivho Primary via its online and/or electronic platforms
+      <p>By accessing, using and/or interacting with Mveledzandivho Primary via its online and/or electronic platforms
         such as
-        its website and application, you consent to the processing of your personal information by Mveledzandivho
+        its website and application, you consent to the processing of your personal information by Mveledzandivho
         Primary.
-        The Processing of personal information will be done in accordance with its POPI Policy. Should you not
-        consent, you must cease your interaction with Mveledzandivho Primary on any and every platform.</p>
+        The Processing of personal information will be done in accordance with its POPI Policy.  Should you not
+        consent, you must cease your interaction with Mveledzandivho Primary on any and every platform.</p>
     </div>
   </section>
-
 
   <footer>
     <div class="container">
@@ -297,6 +303,18 @@
       </ul>
     </div>
   </footer>
+
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+  <script>
+    AOS.init({
+      offset: 200,
+      duration: 600,
+      once: false,
+      mirror: false,
+      easing: 'ease-in-out',
+    });
+  </script>
 
   <script src="./js/main.js"></script>
 
