--- a/wall-of-fame.html
+++ b/wall-of-fame.html
@@ -12,7 +12,8 @@
   <!-- Font Awesome Icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-
+  <!-- Animate On Scroll -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <link rel="stylesheet" href="./css/utility.css">
   <link rel="stylesheet" href="./css/style.css">
@@ -60,14 +61,15 @@
   </aside>
 
   <section id="wof-hero">
-    <p>Meet the Winners</p>
-    <h1>Wall of Fame</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur perferendis dolore officiis? Voluptatum
+    <p data-aos="fade-up">Meet the Winners</p>
+    <h1 data-aos="fade-up">Wall of Fame</h1>
+    <p data-aos="fade-up">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur perferendis dolore
+      officiis? Voluptatum
       dicta modi natus delectus, necessitatibus eiu</p>
   </section>
 
   <section id="wof-year">
-    <div class="container">
+    <div class="container" data-aos="fade-left">
       <div>
         <select>
           <option value="2021">2021</option>
@@ -81,9 +83,9 @@
 
   <section id="wof-people">
     <div class="container">
-      <h1>Academics Winner</h1>
+      <h1 data-aos="fade-up">Academics Winner</h1>
       <div class="wof-cards">
-        <div class="wof-card">
+        <div class="wof-card" data-aos="fade-up">
           <img src="./images/alumni/alumni-1.jpg" alt="">
           <p>Dennis Ritchie</p>
           <p>1st, Amend The Code</p>
@@ -92,7 +94,7 @@
             assumenda. Asperiores possimus cum repellendus qui esse. Maiores error eius voluptatem excepturi voluptates.
           </p>
         </div>
-        <div class="wof-card">
+        <div class="wof-card" data-aos="fade-up">
           <img src="./images/alumni/alumni-2.jpg" alt="">
           <p>Rasmas Ledorf</p>
           <p>2nd, Amend The Code</p>
@@ -101,7 +103,7 @@
             assumenda. Asperiores possimus cum repellendus qui esse. Maiores error eius voluptatem excepturi voluptates.
           </p>
         </div>
-        <div class="wof-card">
+        <div class="wof-card" data-aos="fade-up">
           <img src="./images/alumni/alumni-3.jpg" alt="">
           <p>Dennis Ritchie</p>
           <p>3rd, Amend The Code</p>
@@ -110,7 +112,7 @@
             assumenda. Asperiores possimus cum repellendus qui esse. Maiores error eius voluptatem excepturi voluptates.
           </p>
         </div>
-        <div class="wof-card">
+        <div class="wof-card" data-aos="fade-up">
           <img src="./images/alumni/alumni-4.jpg" alt="">
           <p>Dennis Ritchie</p>
           <p>1st, Amend The Code</p>
@@ -119,7 +121,7 @@
             assumenda. Asperiores possimus cum repellendus qui esse. Maiores error eius voluptatem excepturi voluptates.
           </p>
         </div>
-        <div class="wof-card">
+        <div class="wof-card" data-aos="fade-up">
           <img src="./images/alumni/alumni-5.jpg" alt="">
           <p>Dennis Ritchie</p>
           <p>1st, Amend The Code</p>
@@ -131,9 +133,9 @@
         </div>
       </div>
 
-      <h1>Culture Winner</h1>
+      <h1 data-aos="fade-up">Culture Winner</h1>
       <div class="wof-cards">
-        <div class="wof-card">
+        <div class="wof-card" data-aos="fade-up">
           <img src="./images/alumni/alumni-6.jpg" alt="">
           <p>Dennis Ritchie</p>
           <p>1st, Amend The Code</p>
@@ -142,7 +144,7 @@
             assumenda. Asperiores possimus cum repellendus qui esse. Maiores error eius voluptatem excepturi voluptates.
           </p>
         </div>
-        <div class="wof-card">
+        <div class="wof-card" data-aos="fade-up">
           <img src="./images/alumni/alumni-7.jpg" alt="">
           <p>Rasmas Ledorf</p>
           <p>2nd, Amend The Code</p>
@@ -151,7 +153,7 @@
             assumenda. Asperiores possimus cum repellendus qui esse. Maiores error eius voluptatem excepturi voluptates.
           </p>
         </div>
-        <div class="wof-card">
+        <div class="wof-card" data-aos="fade-up">
           <img src="./images/alumni/alumni-8.jpg" alt="">
           <p>Dennis Ritchie</p>
           <p>3rd, Amend The Code</p>
@@ -162,9 +164,9 @@
         </div>
       </div>
 
-      <h1>Sports Winner</h1>
+      <h1 data-aos="fade-up">Sports Winner</h1>
       <div class="wof-cards">
-        <div class="wof-card">
+        <div class="wof-card" data-aos="fade-up">
           <img src="./images/alumni/alumni-9.jpg" alt="">
           <p>Dennis Ritchie</p>
           <p>1st, Amend The Code</p>
@@ -173,7 +175,7 @@
             assumenda. Asperiores possimus cum repellendus qui esse. Maiores error eius voluptatem excepturi voluptates.
           </p>
         </div>
-        <div class="wof-card">
+        <div class="wof-card" data-aos="fade-up">
           <img src="./images/alumni/alumni-10.jpg" alt="">
           <p>Rasmas Ledorf</p>
           <p>2nd, Amend The Code</p>
@@ -182,7 +184,7 @@
             assumenda. Asperiores possimus cum repellendus qui esse. Maiores error eius voluptatem excepturi voluptates.
           </p>
         </div>
-        <div class="wof-card">
+        <div class="wof-card" data-aos="fade-up">
           <img src="./images/alumni/alumni-11.jpg" alt="">
           <p>Dennis Ritchie</p>
           <p>3rd, Amend The Code</p>
@@ -191,7 +193,7 @@
             assumenda. Asperiores possimus cum repellendus qui esse. Maiores error eius voluptatem excepturi voluptates.
           </p>
         </div>
-        <div class="wof-card">
+        <div class="wof-card" data-aos="fade-up">
           <img src="./images/alumni/alumni-12.jpg" alt="">
           <p>Dennis Ritchie</p>
           <p>1st, Amend The Code</p>
@@ -204,8 +206,6 @@
     </div>
   </section>
 
-
-
   <footer>
     <div class="container">
       <p>&copy; 2021, Mveledzandivho Primary School. All right reserved.</p>
@@ -215,6 +215,18 @@
       </ul>
     </div>
   </footer>
+
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+  <script>
+    AOS.init({
+      offset: 200,
+      duration: 600,
+      once: false,
+      mirror: false,
+      easing: 'ease-in-out',
+    });
+  </script>
 
   <script src="./js/main.js"></script>
 
