--- a/about.html
+++ b/about.html
@@ -12,7 +12,8 @@
   <!-- Font Awesome Icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-
+  <!-- Animate On Scroll -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <link rel="stylesheet" href="./css/utility.css">
   <link rel="stylesheet" href="./css/style.css">
@@ -60,67 +61,88 @@
   </aside>
 
 
+  <!-- About-Hero -->
 
   <section id="about-hero">
-    <p>About</p>
-    <h1>About Mveledzandivho</h1>
-    <a href="./sponsor.html" class="btn">Get Involved</a>
+    <p data-aos="fade-up">About</p>
+    <h1 data-aos="fade-up">About Mveledzandivho</h1>
+    <a href="./sponsor.html" class="btn" data-aos="fade-up">Get Involved</a>
   </section>
+
+
+  <!-- About Mission -->
 
   <section id="about-mission">
     <article>
-      <p>Our Mission</p>
-      <h2>What we Stand For</h2>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, accusamus vero odit voluptatibus beatae
+      <p data-aos="fade-right">Our Mission</p>
+      <h2 data-aos="fade-right">What we Stand For</h2>
+      <p data-aos="fade-right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, accusamus vero odit
+        voluptatibus beatae
         consequatur nulla voluptate ut necessitatibus aliquid et similique nam, corrupti ipsam magnam? At sapiente
         possimus molestias.</p>
     </article>
     <article></article>
   </section>
 
+
+  <!-- About Vision -->
+
   <section id="about-vision">
     <article></article>
     <article>
-      <p>our vision</p>
-      <h2>Teaching the Professionals of Tomorrow</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, beatae cum repellat enim et deserunt maxime
+      <p data-aos="fade-left">our vision</p>
+      <h2 data-aos="fade-left">Teaching the Professionals of Tomorrow</h2>
+      <p data-aos="fade-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, beatae cum repellat
+        enim et deserunt maxime
         dicta neque eaque, quae ullam laborum nobis praesentium, itaque rerum. Placeat distinctio commodi dolores?</p>
     </article>
   </section>
 
+
+  <!-- About Alumni -->
+
   <section id="about-alumni">
     <article>
-      <p>Our Alumni</p>
-      <h2>Life Winners of Mveledzandivho</h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident at, hic accusantium laborum pariatur eaque
+      <p data-aos="fade-right">Our Alumni</p>
+      <h2 data-aos="fade-right">Life Winners of Mveledzandivho</h2>
+      <p data-aos="fade-right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident at, hic accusantium
+        laborum pariatur eaque
         maiores magni cupiditate voluptatem odio recusandae totam, repudiandae, ratione officia harum minus eius
         delectus ipsa?</p>
-      <a href="./alumni.html" class="btn">Meet Them</a>
+      <a href="./alumni.html" class="btn" data-aos="fade-right">Meet Them</a>
     </article>
     <article></article>
   </section>
+
+
+  <!-- About Wof -->
 
   <section id="about-wof">
     <article></article>
     <article>
-      <p>Wall of Fame</p>
-      <h2>Meet he Winner of This Year</h2>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias, quo quae eveniet, itaque non reprehenderit
+      <p data-aos="fade-left">Wall of Fame</p>
+      <h2 data-aos="fade-left">Meet he Winner of This Year</h2>
+      <p data-aos="fade-left">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias, quo quae eveniet, itaque
+        non reprehenderit
         harum ab velit laborum corrupti facilis ipsum eaque nam quasi repudiandae explicabo magni animi tempore?</p>
-      <a href="./wall-of-fame.html" class="btn">Visit Wall of Fame</a>
+      <a href="./wall-of-fame.html" class="btn" data-aos="fade-left">Visit Wall of Fame</a>
     </article>
   </section>
 
+
+  <!-- Curriculum -->
+
   <section id="curriculum">
-    <i class="fa-solid fa-list"></i>
-    <p>curriculum</p>
-    <h2>Academic Departments</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+    <i data-aos="fade-up" class="fa-solid fa-list"></i>
+    <p data-aos="fade-up">curriculum</p>
+    <h2 data-aos="fade-up">Academic Departments</h2>
+    <p data-aos="fade-up">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+      labore et dolore
       magna
       aliqua</p>
     <div class="container">
 
-      <div class="box">
+      <div class="box" data-aos="fade-up">
         <i class="fa-solid fa-pen-to-square"></i>
         <div>
           <h2>Reading & Writing</h2>
@@ -129,7 +151,7 @@
         </div>
       </div>
 
-      <div class="box">
+      <div class="box" data-aos="fade-up">
         <i class="fa-solid fa-calculator"></i>
         <div>
           <h2>Mathematics</h2>
@@ -137,7 +159,7 @@
         </div>
       </div>
 
-      <div class="box">
+      <div class="box" data-aos="fade-up">
         <i class="fa-solid fa-atom"></i>
         <div>
           <h2>Sciences</h2>
@@ -145,7 +167,7 @@
         </div>
       </div>
 
-      <div class="box">
+      <div class="box" data-aos="fade-up">
         <i class="fa-solid fa-clock-rotate-left"></i>
         <div>
           <h2>History</h2>
@@ -154,14 +176,15 @@
       </div>
     </div>
 
-    <h2>Extra Curricular Programs</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+    <h2 data-aos="fade-up">Extra Curricular Programs</h2>
+    <p data-aos="fade-up">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+      labore et dolore
       magna
       aliqua.</p>
 
     <div class="container alt">
 
-      <div class="box">
+      <div class="box" data-aos="fade-up">
         <i class="fa-solid fa-volume-low"></i>
         <div>
           <h2>Young Musicians</h2>
@@ -170,7 +193,7 @@
         </div>
       </div>
 
-      <div class="box">
+      <div class="box" data-aos="fade-up">
         <i class="fa-regular fa-lightbulb"></i>
         <div>
           <h2>Math & Science Club</h2>
@@ -178,7 +201,7 @@
         </div>
       </div>
 
-      <div class="box">
+      <div class="box" data-aos="fade-up">
         <i class="fa-solid fa-basketball"></i>
         <div>
           <h2>Afterschool Sports</h2>
@@ -186,7 +209,7 @@
         </div>
       </div>
 
-      <div class="box">
+      <div class="box" data-aos="fade-up">
         <i class="fa-solid fa-palette"></i>
         <div>
           <h2>Art & Design</h2>
@@ -196,25 +219,28 @@
     </div>
   </section>
 
+
+  <!-- About Sponsors -->
+
   <section id="about-sponsors">
-    <i class="fa-solid fa-hands-holding"></i>
-    <p>Featured Sponsors</p>
-    <h2>Thank You To Our Sponsors</h2>
+    <i class="fa-solid fa-hands-holding" data-aos="fade-up"></i>
+    <p data-aos="fade-up">Featured Sponsors</p>
+    <h2 data-aos="fade-up">Thank You To Our Sponsors</h2>
     <div class="container">
 
-      <div class="box">
+      <div class="box" data-aos="fade-up">
         <img src="./images/sponsor-1.png" alt="">
       </div>
 
-      <div class="box">
+      <div class="box" data-aos="fade-up">
         <img src="./images/sponsor-2.png" alt="">
       </div>
 
-      <div class="box">
+      <div class="box" data-aos="fade-up">
         <img src="./images/sponsor-3.png" alt="">
       </div>
 
-      <div class="box">
+      <div class="box" data-aos="fade-up">
         <img src="./images/sponsor-4.jpg" alt="">
       </div>
 
@@ -222,15 +248,16 @@
 
     <div class="container all-sponsors">
       <article>
-        <p>Get Involved in Our Mission</p>
-        <h2>Become a Sponsor</h2>
-        <a href="./sponsor.html" class="btn">Get Involved</a>
+        <p data-aos="fade-up-right">Get Involved in Our Mission</p>
+        <h2 data-aos="fade-up-right">Become a Sponsor</h2>
+        <a href="./sponsor.html" class="btn" data-aos="fade-up-right">Get Involved</a>
       </article>
       <article>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, veritatis earum! Consequatur hic quidem nemo
+        <p data-aos="fade-up-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, veritatis earum!
+          Consequatur hic quidem nemo
           illum laborum officia repellat quas itaque dolor et rem inventore praesentium provident modi ex ullam dicta,
           vero iusto impedit minus eaque. Earum, error! Id, eum.</p>
-        <a href="./all-sponsors.html" class="btn">Visit All Sponsors</a>
+        <a href="./all-sponsors.html" class="btn" data-aos="fade-up-left">Visit All Sponsors</a>
       </article>
     </div>
   </section>
@@ -238,25 +265,25 @@
   <section id="get-in-touch">
     <div class="container">
       <article>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>450</h2>
           <p>Students</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>30</h2>
           <p>Faculty</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>24</h2>
           <p>After School Programs</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>51</h2>
           <p>Years Established</p>
         </div>
       </article>
 
-      <article>
+      <article data-aos="fade-up-left">
         <h2>Get In Touch</h2>
 
         <p>Location: 1243 Divi St., San Francisco, CA 92421</p>
@@ -271,17 +298,16 @@
       </article>
     </div>
 
-    <div class="policy">
+    <div class="policy" data-aos="fade-up">
       <p>Non-Discrimination Policy</p>
-      <p>By accessing, using and/or interacting with Mveledzandivho Primary via its online and/or electronic platforms
+      <p>By accessing, using and/or interacting with Mveledzandivho Primary via its online and/or electronic platforms
         such as
-        its website and application, you consent to the processing of your personal information by Mveledzandivho
+        its website and application, you consent to the processing of your personal information by Mveledzandivho
         Primary.
-        The Processing of personal information will be done in accordance with its POPI Policy. Should you not
-        consent, you must cease your interaction with Mveledzandivho Primary on any and every platform.</p>
+        The Processing of personal information will be done in accordance with its POPI Policy.  Should you not
+        consent, you must cease your interaction with Mveledzandivho Primary on any and every platform.</p>
     </div>
   </section>
-
 
   <footer>
     <div class="container">
@@ -292,6 +318,18 @@
       </ul>
     </div>
   </footer>
+
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+  <script>
+    AOS.init({
+      offset: 200,
+      duration: 600,
+      once: false,
+      mirror: false,
+      easing: 'ease-in-out',
+    });
+  </script>
 
   <script src="./js/main.js"></script>
 
