--- a/all-sponsors.html
+++ b/all-sponsors.html
@@ -12,7 +12,8 @@
   <!-- Font Awesome Icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-
+  <!-- Animate On Scroll -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <link rel="stylesheet" href="./css/utility.css">
   <link rel="stylesheet" href="./css/style.css">
@@ -24,9 +25,6 @@
 <body>
 
   <!-- Header Section -->
-
-  <!-- Header Section -->
-
   <header>
     <div class="container">
       <img src="./images/brand.png" alt="brand-icon">
@@ -62,29 +60,35 @@
   </aside>
 
   <section id="sponsors-hero">
-    <p>Mission Uplifters</p>
-    <h1>Our Sponsors</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo recusandae cumque eos ullam repellendus quam!</p>
+    <p data-aos="fade-up">Mission Uplifters</p>
+    <h1 data-aos="fade-up">Our Sponsors</h1>
+    <p data-aos="fade-up">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo recusandae cumque eos ullam
+      repellendus quam!</p>
   </section>
 
   <section id="all-sponsors">
     <div class="container">
-      <h2>Thank You To Our Sponsors</h2>
+      <h2 data-aos="fade-up">Thank You To Our Sponsors</h2>
       <div class="sponsor-container">
-        <div><a href="#" target="_blank"><img src="./images/sponsors/sponsor-1.jpg" alt=""></a></div>
-        <div><a href="#" target="_blank"><img src="./images/sponsors/sponsor-2.jpg" alt=""></a></div>
-        <div><a href="#" target="_blank"><img src="./images/sponsors/sponsor-3.jpg" alt=""></a></div>
-        <div><a href="#" target="_blank"><img src="./images/sponsors/sponsor-4.jpg" alt=""></a></div>
-        <div><a href="#" target="_blank"><img src="./images/sponsors/sponsor-5.jpg" alt=""></a></div>
-        <div><a href="#" target="_blank"><img src="./images/sponsors/sponsor-6.jpg" alt=""></a></div>
-        <div><a href="#" target="_blank"><img src="./images/sponsors/sponsor-7.jpg" alt=""></a></div>
-        <div><a href="#" target="_blank"><img src="./images/sponsors/sponsor-8.jpg" alt=""></a></div>
-        <div><a href="#" target="_blank"><img src="./images/sponsors/sponsor-9.jpg" alt=""></a></div>
-        <div><a href="#" target="_blank"><img src="./images/sponsors/sponsor-10.jpg" alt=""></a></div>
-        <div><a href="#" target="_blank"><img src="./images/sponsors/sponsor-11.png" alt=""></a></div>
-        <div><a href="#" target="_blank"><img src="./images/sponsors/sponsor-12.png" alt=""></a></div>
-        <div><a href="#" target="_blank"><img src="./images/sponsors/sponsor-13.png" alt=""></a></div>
-        <div><a href="#" target="_blank"><img src="./images/sponsors/sponsor-14.jpg" alt=""></a></div>
+        <div data-aos="fade-up"><a href="#" target="_blank"><img src="./images/sponsors/sponsor-1.jpg" alt=""></a></div>
+        <div data-aos="fade-up"><a href="#" target="_blank"><img src="./images/sponsors/sponsor-2.jpg" alt=""></a></div>
+        <div data-aos="fade-up"><a href="#" target="_blank"><img src="./images/sponsors/sponsor-3.jpg" alt=""></a></div>
+        <div data-aos="fade-up"><a href="#" target="_blank"><img src="./images/sponsors/sponsor-4.jpg" alt=""></a></div>
+        <div data-aos="fade-up"><a href="#" target="_blank"><img src="./images/sponsors/sponsor-5.jpg" alt=""></a></div>
+        <div data-aos="fade-up"><a href="#" target="_blank"><img src="./images/sponsors/sponsor-6.jpg" alt=""></a></div>
+        <div data-aos="fade-up"><a href="#" target="_blank"><img src="./images/sponsors/sponsor-7.jpg" alt=""></a></div>
+        <div data-aos="fade-up"><a href="#" target="_blank"><img src="./images/sponsors/sponsor-8.jpg" alt=""></a></div>
+        <div data-aos="fade-up"><a href="#" target="_blank"><img src="./images/sponsors/sponsor-9.jpg" alt=""></a></div>
+        <div data-aos="fade-up"><a href="#" target="_blank"><img src="./images/sponsors/sponsor-10.jpg" alt=""></a>
+        </div>
+        <div data-aos="fade-up"><a href="#" target="_blank"><img src="./images/sponsors/sponsor-11.png" alt=""></a>
+        </div>
+        <div data-aos="fade-up"><a href="#" target="_blank"><img src="./images/sponsors/sponsor-12.png" alt=""></a>
+        </div>
+        <div data-aos="fade-up"><a href="#" target="_blank"><img src="./images/sponsors/sponsor-13.png" alt=""></a>
+        </div>
+        <div data-aos="fade-up"><a href="#" target="_blank"><img src="./images/sponsors/sponsor-14.jpg" alt=""></a>
+        </div>
       </div>
     </div>
   </section>
@@ -92,25 +96,25 @@
   <section id="get-in-touch">
     <div class="container">
       <article>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>450</h2>
           <p>Students</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>30</h2>
           <p>Faculty</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>24</h2>
           <p>After School Programs</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>51</h2>
           <p>Years Established</p>
         </div>
       </article>
 
-      <article>
+      <article data-aos="fade-up-left">
         <h2>Get In Touch</h2>
 
         <p>Location: 1243 Divi St., San Francisco, CA 92421</p>
@@ -125,7 +129,7 @@
       </article>
     </div>
 
-    <div class="policy">
+    <div class="policy" data-aos="fade-up">
       <p>Non-Discrimination Policy</p>
       <p>By accessing, using and/or interacting with Mveledzandivho Primary via its online and/or electronic platforms
         such as
@@ -145,6 +149,18 @@
       </ul>
     </div>
   </footer>
+
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+  <script>
+    AOS.init({
+      offset: 200,
+      duration: 600,
+      once: false,
+      mirror: false,
+      easing: 'ease-in-out',
+    });
+  </script>
 
   <script src="./js/main.js"></script>
 
