--- a/alumni.html
+++ b/alumni.html
@@ -12,7 +12,8 @@
   <!-- Font Awesome Icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-
+  <!-- Animate On Scroll -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <link rel="stylesheet" href="./css/utility.css">
   <link rel="stylesheet" href="./css/style.css">
@@ -59,14 +60,15 @@
 
 
   <section id="alumni-hero">
-    <p>Life Winners at Mveledzandivho</p>
-    <h1>Our Alumni</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo recusandae cumque eos ullam repellendus quam!</p>
+    <p data-aos="fade-up">Life Winners at Mveledzandivho</p>
+    <h1 data-aos="fade-up">Our Alumni</h1>
+    <p data-aos="fade-up">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo recusandae cumque eos ullam
+      repellendus quam!</p>
   </section>
 
   <section id="alumni-people">
     <div class="container">
-      <div class="alumni-box">
+      <div class="alumni-box" data-aos="fade-up">
         <img src="./images/alumni/alumni-1.jpg" alt="">
         <p>Mark Duppenthaler</p>
         <p>Software Engineer, Facebook</p>
@@ -75,7 +77,7 @@
           asperiores, iusto doloremque sit
           delectus quia sequi temporibus quam voluptatibus!</p>
       </div>
-      <div class="alumni-box">
+      <div class="alumni-box" data-aos="fade-up">
         <img src="./images/alumni/alumni-2.jpg" alt="alumni-2-img">
         <p>Alumni Name 2</p>
         <p>Engineer</p>
@@ -83,7 +85,7 @@
         <p>Similique itaque unde aliquid eos, nulla qui nemo in ratione quo dolores impedit iure dignissimos voluptatem
           nisi quos aliquam quam.</p>
       </div>
-      <div class="alumni-box">
+      <div class="alumni-box" data-aos="fade-up">
         <img src="./images/alumni/alumni-3.jpg" alt="alumni-3-img">
         <p>Alumni Name 3</p>
         <p>Engineer</p>
@@ -91,7 +93,7 @@
         <p>Ea, possimus. Voluptatibus expedita corporis provident nobis nihil exercitationem, deserunt atque veritatis
           ut. Harum mollitia voluptate architecto ipsam fuga deserunt?</p>
       </div>
-      <div class="alumni-box">
+      <div class="alumni-box" data-aos="fade-up">
         <img src="./images/alumni/alumni-4.jpg" alt="alumni-4-img">
         <p>Alumni Name 4</p>
         <p>Engineer</p>
@@ -99,7 +101,7 @@
         <p>Dignissimos non ipsam error eos voluptate quae recusandae blanditiis enim, ut fugit aut repudiandae, atque
           illo sapiente voluptates voluptatibus totam.</p>
       </div>
-      <div class="alumni-box">
+      <div class="alumni-box" data-aos="fade-up">
         <img src="./images/alumni/alumni-5.jpg" alt="alumni-5-img">
         <p>Alumni Name 5</p>
         <p>Engineer</p>
@@ -107,7 +109,7 @@
         <p>Soluta assumenda exercitationem recusandae optio inventore, eum repudiandae est nihil deserunt ducimus a
           placeat reprehenderit. Aut facilis nihil molestias autem.</p>
       </div>
-      <div class="alumni-box">
+      <div class="alumni-box" data-aos="fade-up">
         <img src="./images/alumni/alumni-6.jpg" alt="alumni-6-img">
         <p>Alumni Name 6</p>
         <p>Engineer</p>
@@ -115,7 +117,7 @@
         <p>Dolor consequatur molestias excepturi eos aliquam dignissimos sequi maxime quam, vitae at beatae. Similique
           dolores commodi reiciendis eius libero ipsam?</p>
       </div>
-      <div class="alumni-box">
+      <div class="alumni-box" data-aos="fade-up">
         <img src="./images/alumni/alumni-7.jpg" alt="alumni-7-img">
         <p>Alumni Name 7</p>
         <p>Engineer</p>
@@ -123,7 +125,7 @@
         <p>Odio deserunt, quae illum eligendi quia officiis tempore, nam provident nihil, laborum harum quam similique
           expedita labore libero sapiente! Vero.</p>
       </div>
-      <div class="alumni-box">
+      <div class="alumni-box" data-aos="fade-up">
         <img src="./images/alumni/alumni-8.jpg" alt="alumni-8-img">
         <p>Alumni Name 8</p>
         <p>Engineer</p>
@@ -131,7 +133,7 @@
         <p>Porro ab id rerum aliquam! Quo corrupti quam sapiente reprehenderit totam, ut enim molestiae dolorum,
           nesciunt autem voluptate facere harum!</p>
       </div>
-      <div class="alumni-box">
+      <div class="alumni-box" data-aos="fade-up">
         <img src="./images/alumni/alumni-9.jpg" alt="alumni-9-img">
         <p>Alumni Name 9</p>
         <p>Engineer</p>
@@ -139,7 +141,7 @@
         <p>Blanditiis necessitatibus aut atque, voluptatum cupiditate aspernatur. Dolore quae adipisci in assumenda,
           minus veniam, officia debitis nostrum voluptatum deserunt tempora.</p>
       </div>
-      <div class="alumni-box">
+      <div class="alumni-box" data-aos="fade-up">
         <img src="./images/alumni/alumni-10.jpg" alt="alumni-10-img">
         <p>Alumni Name 10</p>
         <p>Engineer</p>
@@ -147,7 +149,7 @@
         <p>Numquam ea accusamus repellat nihil officiis accusantium delectus, sed minus quidem, tempora nostrum nam,
           eveniet quisquam corrupti error laborum. Rerum.</p>
       </div>
-      <div class="alumni-box">
+      <div class="alumni-box" data-aos="fade-up">
         <img src="./images/alumni/alumni-11.jpg" alt="alumni-11-img">
         <p>Alumni Name 11</p>
         <p>Engineer</p>
@@ -155,7 +157,7 @@
         <p>Officia consequatur magni nihil quis perferendis sunt obcaecati nam? Omnis natus modi aut amet aperiam beatae
           pariatur quisquam, cumque sint.</p>
       </div>
-      <div class="alumni-box">
+      <div class="alumni-box" data-aos="fade-up">
         <img src="./images/alumni/alumni-12.jpg" alt="alumni-12-img">
         <p>Alumni Name 12</p>
         <p>Engineer</p>
@@ -166,28 +168,29 @@
     </div>
   </section>
 
+
   <section id="get-in-touch">
     <div class="container">
       <article>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>450</h2>
           <p>Students</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>30</h2>
           <p>Faculty</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>24</h2>
           <p>After School Programs</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>51</h2>
           <p>Years Established</p>
         </div>
       </article>
 
-      <article>
+      <article data-aos="fade-up-left">
         <h2>Get In Touch</h2>
 
         <p>Location: 1243 Divi St., San Francisco, CA 92421</p>
@@ -202,7 +205,7 @@
       </article>
     </div>
 
-    <div class="policy">
+    <div class="policy" data-aos="fade-up">
       <p>Non-Discrimination Policy</p>
       <p>By accessing, using and/or interacting with Mveledzandivho Primary via its online and/or electronic platforms
         such as
@@ -222,6 +225,18 @@
       </ul>
     </div>
   </footer>
+
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+  <script>
+    AOS.init({
+      offset: 200,
+      duration: 600,
+      once: false,
+      mirror: false,
+      easing: 'ease-in-out',
+    });
+  </script>
 
   <script src="./js/main.js"></script>
 
