--- a/gallery.html
+++ b/gallery.html
@@ -15,6 +15,9 @@
   <!-- Fancy Box CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css" />
 
+  <!-- Animate On Scroll -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="./css/utility.css" />
   <link rel="stylesheet" href="./css/style.css" />
@@ -61,9 +64,9 @@
   </aside>
 
   <section id="gallery-hero">
-    <p>Our Environment</p>
-    <h1>Mveledzandivho's Gallery</h1>
-    <p>
+    <p data-aos="fade-up">Our Environment</p>
+    <h1 data-aos="fade-up">Mveledzandivho's Gallery</h1>
+    <p data-aos="fade-up">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure ipsam
       aperiam quisquam odio odit vel veritatis. Earum tempore consequatur
       architecto?
@@ -73,122 +76,121 @@
 
   <section id="gallery-media">
     <div class="container">
-      <h2>December 2021</h2>
+      <h2 data-aos="fade-right">December 2021</h2>
       <div class="gallery-box image-box">
-        <a href="./images/gallery/img-1.jpg" data-fancybox="dec-2021">
+        <a href="./images/gallery/img-1.jpg" data-fancybox="dec-2021" data-aos="fade-up">
           <img src="./images/gallery/img-1.jpg" alt="" />
         </a>
-        <a href="./images/gallery/img-2.jpg" data-fancybox="dec-2021">
+        <a href="./images/gallery/img-2.jpg" data-fancybox="dec-2021" data-aos="fade-up">
           <img src="./images/gallery/img-2.jpg" alt="" />
         </a>
       </div>
-      <h2>November 2021</h2>
+      <h2 data-aos="fade-right">November 2021</h2>
       <div class="gallery-box image-box">
-        <a href="./images/gallery/img-1.jpg" data-fancybox="nov-2021">
+        <a href="./images/gallery/img-1.jpg" data-fancybox="nov-2021" data-aos="fade-up">
           <img src="./images/gallery/img-1.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-2.jpg" data-fancybox="nov-2021">
+        <a href="./images/gallery/img-2.jpg" data-fancybox="nov-2021" data-aos="fade-up">
           <img src="./images/gallery/img-2.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-3.jpg" data-fancybox="nov-2021">
+        <a href="./images/gallery/img-3.jpg" data-fancybox="nov-2021" data-aos="fade-up">
           <img src="./images/gallery/img-3.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-4.jpg" data-fancybox="nov-2021">
+        <a href="./images/gallery/img-4.jpg" data-fancybox="nov-2021" data-aos="fade-up">
           <img src="./images/gallery/img-4.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-5.jpg" data-fancybox="nov-2021">
+        <a href="./images/gallery/img-5.jpg" data-fancybox="nov-2021" data-aos="fade-up">
           <img src="./images/gallery/img-5.jpg" alt="" />
         </a>
 
 
       </div>
-      <h2>October 2021</h2>
+      <h2 data-aos="fade-right">October 2021</h2>
       <div class="gallery-box image-box">
-        <a href="./images/gallery/img-6.jpg" data-fancybox="oct-2021">
+        <a href="./images/gallery/img-6.jpg" data-fancybox="oct-2021" data-aos="fade-up">
           <img src="./images/gallery/img-6.jpg" alt="" />
         </a>
-
-        <a href="./images/gallery/img-7.jpg" data-fancybox="oct-2021">
+        <a href="./images/gallery/img-7.jpg" data-fancybox="oct-2021" data-aos="fade-up">
           <img src="./images/gallery/img-7.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-8.jpg" data-fancybox="oct-2021">
+        <a href="./images/gallery/img-8.jpg" data-fancybox="oct-2021" data-aos="fade-up">
           <img src="./images/gallery/img-8.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-9.jpg" data-fancybox="oct-2021">
+        <a href="./images/gallery/img-9.jpg" data-fancybox="oct-2021" data-aos="fade-up">
           <img src="./images/gallery/img-9.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-10.jpg" data-fancybox="oct-2021">
+        <a href="./images/gallery/img-10.jpg" data-fancybox="oct-2021" data-aos="fade-up">
           <img src="./images/gallery/img-10.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-11.jpg" data-fancybox="nov-2021">
+        <a href="./images/gallery/img-11.jpg" data-fancybox="nov-2021" data-aos="fade-up">
           <img src="./images/gallery/img-11.jpg" alt="" />
         </a>
       </div>
-      <h2>September 2021</h2>
+      <h2 data-aos="fade-right">September 2021</h2>
       <div class="gallery-box image-box">
-        <a href="./images/gallery/img-12.jpg" data-fancybox="sep-2021">
+        <a href="./images/gallery/img-12.jpg" data-fancybox="sep-2021" data-aos="fade-up" data-aos="fade-up">
           <img src="./images/gallery/img-12.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-13.jpg" data-fancybox="sep-2021">
+        <a href="./images/gallery/img-13.jpg" data-fancybox="sep-2021" data-aos="fade-up" data-aos="fade-up">
           <img src="./images/gallery/img-13.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-14.jpg" data-fancybox="sep-2021">
+        <a href="./images/gallery/img-14.jpg" data-fancybox="sep-2021" data-aos="fade-up" data-aos="fade-up">
           <img src="./images/gallery/img-14.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-15.jpg" data-fancybox="sep-2021">
+        <a href="./images/gallery/img-15.jpg" data-fancybox="sep-2021" data-aos="fade-up" data-aos="fade-up">
           <img src="./images/gallery/img-15.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-16.jpg" data-fancybox="sep-2021">
+        <a href="./images/gallery/img-16.jpg" data-fancybox="sep-2021" data-aos="fade-up" data-aos="fade-up">
           <img src="./images/gallery/img-16.jpg" alt="" />
         </a>
       </div>
-      <h2>August 2021</h2>
+      <h2 data-aos="fade-right">August 2021</h2>
       <div class="gallery-box image-box">
-        <a href="./images/gallery/img-17.jpg" data-fancybox="aug-2021">
+        <a href="./images/gallery/img-17.jpg" data-fancybox="aug-2021" data-aos="fade-up" data-aos="fade-up">
           <img src="./images/gallery/img-17.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-18.jpg" data-fancybox="aug-2021">
+        <a href="./images/gallery/img-18.jpg" data-fancybox="aug-2021" data-aos="fade-up" data-aos="fade-up">
           <img src="./images/gallery/img-18.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-19.jpg" data-fancybox="aug-2021">
+        <a href="./images/gallery/img-19.jpg" data-fancybox="aug-2021" data-aos="fade-up">
           <img src="./images/gallery/img-19.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-20.jpg" data-fancybox="aug-2021">
+        <a href="./images/gallery/img-20.jpg" data-fancybox="aug-2021" data-aos="fade-up">
           <img src="./images/gallery/img-20.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-21.jpg" data-fancybox="aug-2021">
+        <a href="./images/gallery/img-21.jpg" data-fancybox="aug-2021" data-aos="fade-up">
           <img src="./images/gallery/img-21.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-22.jpg" data-fancybox="aug-2021">
+        <a href="./images/gallery/img-22.jpg" data-fancybox="aug-2021" data-aos="fade-up">
           <img src="./images/gallery/img-22.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-23.jpg" data-fancybox="aug-2021">
+        <a href="./images/gallery/img-23.jpg" data-fancybox="aug-2021" data-aos="fade-up">
           <img src="./images/gallery/img-23.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-24.jpg" data-fancybox="aug-2021">
+        <a href="./images/gallery/img-24.jpg" data-fancybox="aug-2021" data-aos="fade-up">
           <img src="./images/gallery/img-24.jpg" alt="" />
         </a>
 
-        <a href="./images/gallery/img-25.jpg" data-fancybox="aug-2021">
+        <a href="./images/gallery/img-25.jpg" data-fancybox="aug-2021" data-aos="fade-up">
           <img src="./images/gallery/img-25.jpg" alt="" />
         </a>
 
@@ -196,28 +198,29 @@
     </div>
   </section>
 
+
   <section id="get-in-touch">
     <div class="container">
       <article>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>450</h2>
           <p>Students</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>30</h2>
           <p>Faculty</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>24</h2>
           <p>After School Programs</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>51</h2>
           <p>Years Established</p>
         </div>
       </article>
 
-      <article>
+      <article data-aos="fade-up-left">
         <h2>Get In Touch</h2>
 
         <p>Location: 1243 Divi St., San Francisco, CA 92421</p>
@@ -232,17 +235,14 @@
       </article>
     </div>
 
-    <div class="policy">
+    <div class="policy" data-aos="fade-up">
       <p>Non-Discrimination Policy</p>
-      <p>
-        By accessing, using and/or interacting with Mveledzandivho Primary via
-        its online and/or electronic platforms such as its website and
-        application, you consent to the processing of your personal
-        information by Mveledzandivho Primary. The Processing of personal
-        information will be done in accordance with its POPI Policy. Should
-        you not consent, you must cease your interaction with Mveledzandivho
-        Primary on any and every platform.
-      </p>
+      <p>By accessing, using and/or interacting with Mveledzandivho Primary via its online and/or electronic platforms
+        such as
+        its website and application, you consent to the processing of your personal information by Mveledzandivho
+        Primary.
+        The Processing of personal information will be done in accordance with its POPI Policy.  Should you not
+        consent, you must cease your interaction with Mveledzandivho Primary on any and every platform.</p>
     </div>
   </section>
 
@@ -250,21 +250,29 @@
     <div class="container">
       <p>&copy; 2021, Mveledzandivho Primary School. All right reserved.</p>
       <ul>
-        <li>
-          <a href=""><i class="fab fa-facebook"></i></a>
-        </li>
-        <li>
-          <a href=""><i class="fab fa-instagram"></i></a>
-        </li>
+        <li><a href=""><i class="fab fa-facebook"></i></a></li>
+        <li><a href=""><i class="fab fa-instagram"></i></a></li>
       </ul>
     </div>
   </footer>
+
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <!-- Fancy Box [Image Gallery Effect] -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+
+  <script>
+    AOS.init({
+      offset: 200,
+      duration: 600,
+      once: false,
+      mirror: false,
+      easing: 'ease-in-out',
+    });
+  </script>
 
   <script src="./js/main.js"></script>
 </body>
