--- a/notice.html
+++ b/notice.html
@@ -12,7 +12,8 @@
   <!-- Font Awesome Icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-
+  <!-- Animate On Scroll -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <link rel="stylesheet" href="./css/utility.css">
   <link rel="stylesheet" href="./css/style.css">
@@ -60,83 +61,83 @@
   </aside>
 
   <section id="sponsor-hero">
-    <p>All Notices</p>
-    <h1>E-Notice Board</h1>
+    <p data-aos="fade-up">All Notices</p>
+    <h1 data-aos="fade-up">E-Notice Board</h1>
   </section>
 
   <section id="all-notice">
 
     <div class="container">
 
-      <h2>December 2021</h2>
+      <h2 data-aos="fade-right">December 2021</h2>
       <div class="notice-box">
-        <div class="box">
+        <div class="box" data-aos="fade-up">
           <h2>exam date postponed</h2>
           <p>21st Dec, 2021</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ratione illum error ipsa aliquam quos.</p>
         </div>
 
-        <div class="box">
+        <div class="box" data-aos="fade-up">
           <h2>Kindergarten Admission Started</h2>
           <p>17st Dec, 2021</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ratione illum error ipsa aliquam quos.</p>
         </div>
       </div>
 
-      <h2>November 2021</h2>
+      <h2 data-aos="fade-right">November 2021</h2>
       <div class="notice-box">
-        <div class="box">
+        <div class="box" data-aos="fade-up">
           <h2>exam date postponed</h2>
           <p>21st Dec, 2021</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ratione illum error ipsa aliquam quos.</p>
         </div>
 
-        <div class="box">
+        <div class="box" data-aos="fade-up">
           <h2>exam date postponed</h2>
           <p>21st Dec, 2021</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ratione illum error ipsa aliquam quos.</p>
         </div>
 
-        <div class="box">
+        <div class="box" data-aos="fade-up">
           <h2>exam date postponed</h2>
           <p>21st Dec, 2021</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ratione illum error ipsa aliquam quos.</p>
         </div>
 
-        <div class="box">
+        <div class="box" data-aos="fade-up">
           <h2>exam date postponed</h2>
           <p>21st Dec, 2021</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ratione illum error ipsa aliquam quos.</p>
         </div>
       </div>
 
-      <h2>October 2021</h2>
+      <h2 data-aos="fade-right">October 2021</h2>
       <div class="notice-box">
-        <div class="box">
+        <div class="box" data-aos="fade-up">
           <h2>exam date postponed</h2>
           <p>21st Dec, 2021</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ratione illum error ipsa aliquam quos.</p>
         </div>
 
-        <div class="box">
+        <div class="box" data-aos="fade-up">
           <h2>exam date postponed</h2>
           <p>21st Dec, 2021</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ratione illum error ipsa aliquam quos.</p>
         </div>
 
-        <div class="box">
+        <div class="box" data-aos="fade-up">
           <h2>exam date postponed</h2>
           <p>21st Dec, 2021</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ratione illum error ipsa aliquam quos.</p>
         </div>
 
-        <div class="box">
+        <div class="box" data-aos="fade-up">
           <h2>exam date postponed</h2>
           <p>21st Dec, 2021</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ratione illum error ipsa aliquam quos.</p>
         </div>
 
-        <div class="box">
+        <div class="box" data-aos="fade-up">
           <h2>exam date postponed</h2>
           <p>21st Dec, 2021</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ratione illum error ipsa aliquam quos.</p>
@@ -148,30 +149,28 @@
 
   </section>
 
-
-
   <section id="get-in-touch">
     <div class="container">
       <article>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>450</h2>
           <p>Students</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>30</h2>
           <p>Faculty</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>24</h2>
           <p>After School Programs</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>51</h2>
           <p>Years Established</p>
         </div>
       </article>
 
-      <article>
+      <article data-aos="fade-up-left">
         <h2>Get In Touch</h2>
 
         <p>Location: 1243 Divi St., San Francisco, CA 92421</p>
@@ -186,17 +185,16 @@
       </article>
     </div>
 
-    <div class="policy">
+    <div class="policy" data-aos="fade-up">
       <p>Non-Discrimination Policy</p>
-      <p>By accessing, using and/or interacting with Mveledzandivho Primary via its online and/or electronic platforms
+      <p>By accessing, using and/or interacting with Mveledzandivho Primary via its online and/or electronic platforms
         such as
-        its website and application, you consent to the processing of your personal information by Mveledzandivho
+        its website and application, you consent to the processing of your personal information by Mveledzandivho
         Primary.
-        The Processing of personal information will be done in accordance with its POPI Policy. Should you not
-        consent, you must cease your interaction with Mveledzandivho Primary on any and every platform.</p>
+        The Processing of personal information will be done in accordance with its POPI Policy.  Should you not
+        consent, you must cease your interaction with Mveledzandivho Primary on any and every platform.</p>
     </div>
   </section>
-
 
   <footer>
     <div class="container">
@@ -207,6 +205,18 @@
       </ul>
     </div>
   </footer>
+
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+  <script>
+    AOS.init({
+      offset: 200,
+      duration: 600,
+      once: false,
+      mirror: false,
+      easing: 'ease-in-out',
+    });
+  </script>
 
   <script src="./js/main.js"></script>
 
