--- a/sponsor.html
+++ b/sponsor.html
@@ -12,7 +12,8 @@
   <!-- Font Awesome Icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-
+  <!-- Animate On Scroll -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <link rel="stylesheet" href="./css/utility.css">
   <link rel="stylesheet" href="./css/style.css">
@@ -59,17 +60,19 @@
   </aside>
 
   <section id="sponsor-hero">
-    <p>Get Involved In Our Mission</p>
-    <h1>Sponsor Our School</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure ipsam aperiam quisquam odio odit vel veritatis.
+    <p data-aos="fade-up">Get Involved In Our Mission</p>
+    <h1 data-aos="fade-up">Sponsor Our School</h1>
+    <p data-aos="fade-up">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure ipsam aperiam quisquam odio
+      odit vel veritatis.
       Earum tempore consequatur architecto?</p>
   </section>
 
   <section id="about-mission">
     <article>
-      <p>Our Mission</p>
-      <h2>What we Stand For</h2>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, accusamus vero odit voluptatibus beatae
+      <p data-aos="fade-right">Our Mission</p>
+      <h2 data-aos="fade-right">What we Stand For</h2>
+      <p data-aos="fade-right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, accusamus vero odit
+        voluptatibus beatae
         consequatur nulla voluptate ut necessitatibus aliquid et similique nam, corrupti ipsam magnam? At sapiente
         possimus molestias.</p>
     </article>
@@ -77,24 +80,24 @@
   </section>
 
   <section id="about-sponsors">
-    <i class="fa-solid fa-hands-holding"></i>
-    <p>Featured Sponsors</p>
-    <h2>Thank You To Our Sponsors</h2>
+    <i class="fa-solid fa-hands-holding" data-aos="fade-up"></i>
+    <p data-aos="fade-up">Featured Sponsors</p>
+    <h2 data-aos="fade-up">Thank You To Our Sponsors</h2>
     <div class="container">
 
-      <div class="box">
+      <div class="box" data-aos="fade-up">
         <img src="./images/sponsor-1.png" alt="">
       </div>
 
-      <div class="box">
+      <div class="box" data-aos="fade-up">
         <img src="./images/sponsor-2.png" alt="">
       </div>
 
-      <div class="box">
+      <div class="box" data-aos="fade-up">
         <img src="./images/sponsor-3.png" alt="">
       </div>
 
-      <div class="box">
+      <div class="box" data-aos="fade-up">
         <img src="./images/sponsor-4.jpg" alt="">
       </div>
 
@@ -102,47 +105,49 @@
 
     <div class="container all-sponsors">
       <article>
-        <p>Get Involved in Our Mission</p>
-        <h2>Become our Sponsor</h2>
-        <a href="#sponsor-form" class="btn">Get Involved</a>
+        <p data-aos="fade-up-right">Get Involved in Our Mission</p>
+        <h2 data-aos="fade-up-right">Become a Sponsor</h2>
+        <a href="./sponsor.html" class="btn" data-aos="fade-up-right">Get Involved</a>
       </article>
       <article>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, veritatis earum! Consequatur hic quidem nemo
+        <p data-aos="fade-up-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, veritatis earum!
+          Consequatur hic quidem nemo
           illum laborum officia repellat quas itaque dolor et rem inventore praesentium provident modi ex ullam dicta,
           vero iusto impedit minus eaque. Earum, error! Id, eum.</p>
-        <a href="#" class="btn">Visit All Sponsors</a>
+        <a href="./all-sponsors.html" class="btn" data-aos="fade-up-left">Visit All Sponsors</a>
       </article>
     </div>
   </section>
 
+
   <section id="sponsor-form">
-    <i class="fa-regular fa-file"></i>
-    <p>Become a Sponsor</p>
-    <h2>Sponsor Our Mission</h2>
+    <i class="fa-regular fa-file" data-aos="fade-up"></i>
+    <p data-aos="fade-up">Become a Sponsor</p>
+    <h2 data-aos="fade-up">Sponsor Our Mission</h2>
 
-    <form action="" class="form-box">
+    <form action="" class="form-box" data-aos="fade-up">
 
-      <div>
+      <div data-aos="fade-up-right">
         <h1>Please, Let us Know <br> Who is Uplifting our School</h1>
       </div>
 
-      <div>
+      <div data-aos="fade-up-left">
         <input type="text" placeholder="Full Name">
         <input type="email" placeholder="Email">
         <input type="text" placeholder="Phone">
       </div>
 
-      <div>
+      <div data-aos="fade-up-right">
         <input type="text" placeholder="Street Address">
         <input type="text" placeholder="Suburb & Province">
         <input type="text" placeholder="Postal Code">
       </div>
 
-      <div>
+      <div data-aos="fade-up-left">
         <textarea name="" id="" placeholder="Want to Say Something"></textarea>
       </div>
 
-      <div>
+      <div data-aos="fade-up-left">
         <button type="submit" class="btn">Submit Application <i class="fa-regular fa-circle-right"></i></button>
       </div>
 
@@ -153,25 +158,25 @@
   <section id="get-in-touch">
     <div class="container">
       <article>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>450</h2>
           <p>Students</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>30</h2>
           <p>Faculty</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>24</h2>
           <p>After School Programs</p>
         </div>
-        <div>
+        <div data-aos="fade-up-right">
           <h2>51</h2>
           <p>Years Established</p>
         </div>
       </article>
 
-      <article>
+      <article data-aos="fade-up-left">
         <h2>Get In Touch</h2>
 
         <p>Location: 1243 Divi St., San Francisco, CA 92421</p>
@@ -186,17 +191,16 @@
       </article>
     </div>
 
-    <div class="policy">
+    <div class="policy" data-aos="fade-up">
       <p>Non-Discrimination Policy</p>
-      <p>By accessing, using and/or interacting with Mveledzandivho Primary via its online and/or electronic platforms
+      <p>By accessing, using and/or interacting with Mveledzandivho Primary via its online and/or electronic platforms
         such as
-        its website and application, you consent to the processing of your personal information by Mveledzandivho
+        its website and application, you consent to the processing of your personal information by Mveledzandivho
         Primary.
-        The Processing of personal information will be done in accordance with its POPI Policy. Should you not
-        consent, you must cease your interaction with Mveledzandivho Primary on any and every platform.</p>
+        The Processing of personal information will be done in accordance with its POPI Policy.  Should you not
+        consent, you must cease your interaction with Mveledzandivho Primary on any and every platform.</p>
     </div>
   </section>
-
 
   <footer>
     <div class="container">
@@ -207,6 +211,18 @@
       </ul>
     </div>
   </footer>
+
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+  <script>
+    AOS.init({
+      offset: 200,
+      duration: 600,
+      once: false,
+      mirror: false,
+      easing: 'ease-in-out',
+    });
+  </script>
 
   <script src="./js/main.js"></script>
 
