Dropdown Added in Menu

--- a/index.html
+++ b/index.html
@@ -32,12 +32,36 @@
       <img src="./images/brand.png" alt="brand-icon">
       <ul>
         <li class="active"><a href="./index.html">Home</a></li>
-        <li><a href="./about.html">About</a></li>
         <li><a href="./admission.html">Apply</a></li>
-        <li><a href="./staff.html">Staff</a></li>
+        <li>
+          <a href="#">School Life <i class="fa-solid fa-sort-down"></i></a>
+          <ul>
+            <li><a href="./gallery.html">Gallery</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">General <i class="fa-solid fa-sort-down"></i></a>
+          <ul>
+            <li><a href="./notice.html">Notice Board</a></li>
+            <li><a href="./library.html">Study Materials</a></li>
+            <li><a href="./wall-of-fame.html">School Wall of Fame</a></li>
+            <li><a href="./blog.html">School News</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">About <i class="fa-solid fa-sort-down"></i></a>
+          <ul>
+            <li><a href="./about.html">Our School</a></li>
+            <li><a href="./staff.html">Our Staff</a></li>
+            <li><a href="./alumni.html">Our Alumni</a></li>
+            <li><a href="./all-sponsors.html">Our Sponsors</a></li>
+          </ul>
+        </li>
         <li><a href="./contact.html">Contact</a></li>
       </ul>
+      <a href="./sponsor.html" class="sponsor-btn">Sponsor Us</a>
       <a href="./login.html" class="btn">Log In</a>
+      <!-- <a href="./login.html" class="user-icon"><i class="fa-regular fa-2x fa-circle-user"></i></a> -->
       <i class="fas fa-bars"></i>
     </div>
   </header>
@@ -53,9 +77,28 @@
     <nav>
       <ul class="container">
         <li class="active"><a href="./index.html">Home</a></li>
-        <li><a href="./about.html">About</a></li>
         <li><a href="./admission.html">Apply</a></li>
-        <li><a href="./staff.html">Staff</a></li>
+        <li><a href="#">School Life</a>
+          <ul>
+            <li><a href="./gallery.html">Gallery</a></li>
+          </ul>
+        </li>
+        <li><a href="#">General</a>
+          <ul>
+            <li><a href="./notice.html">Notice Board</a></li>
+            <li><a href="./library.html">Study Materials</a></li>
+            <li><a href="./wall-of-fame.html">School Wall of Fame</a></li>
+            <li><a href="./news.html">School News</a></li>
+          </ul>
+        </li>
+        <li><a href="#">About</a>
+          <ul>
+            <li><a href="./about.html">Our School</a></li>
+            <li><a href="./staff.html">Our Staff</a></li>
+            <li><a href="./alumni.html">Our Alumni</a></li>
+            <li><a href="./sponsor.html">Our Sponsors</a></li>
+          </ul>
+        </li>
         <li><a href="./contact.html">Contact</a></li>
       </ul>
     </nav>
